--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -27,7 +27,7 @@ body {
     padding: 0;
     font-size: 4.5em;
     font-weight: 700;
-    text-decoration-color: #FFA62F;
+    color: #FFA62F;
 }
 
 /* Custom Button Styles */
